сделал добавление контента

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -33,3 +33,14 @@ h4 {
     font-size: 20px;
   }
 }
+
+textarea {
+  overflow-y: scroll; /* позволяет прокручивать */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  height: 100px;
+}
+
+textarea::-webkit-scrollbar {
+  display: none; /* Chrome, Safari и др. */
+}
